5114 Refactor S3ExpandDirectories